Add jupytext files

--- a/aor24/02.ipynb
+++ b/aor24/02.ipynb
@@ -71,20 +71,27 @@
    "outputs": [
     {
      "data": {
+      "text/markdown": [
+       "\n",
+       "Path   | Distance | Cost\n",
+       "------ | -------- | ----\n",
+       "1 -> 37 -> 41 -> 2 -> 100 | 131   | 44\n"
+      ],
       "text/plain": [
-       "[1, 37, 41, 2, 100]"
+       "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "import itertools\n",
     "import re\n",
     "from collections.abc import Sequence\n",
+    "from textwrap import dedent\n",
     "\n",
+    "import IPython\n",
     "import networkx as nx\n",
     "import pandas as pd\n",
     "\n",
@@ -118,53 +125,30 @@
     "\n",
     "\n",
     "path = find_path(src=1, dest=100, budget=73)\n",
-    "path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f2e0b4dd-a3f3-4692-bebb-22b4b7e40ef6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "131"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum_along_path(path, 'dist')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a362cb86-e567-49f9-81aa-6fef918571d6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "44"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum_along_path(path, 'cost')"
+    "\n",
+    "\n",
+    "IPython.display.display(\n",
+    "    IPython.display.Markdown(\n",
+    "        dedent(\n",
+    "            '''\n",
+    "                Path   | Distance | Cost\n",
+    "                ------ | -------- | ----\n",
+    "                {path} | {dist}   | {cost}\n",
+    "            '''.format(\n",
+    "                path=' -> '.join(map(str, path)),\n",
+    "                dist=sum_along_path(path, 'dist'),\n",
+    "                cost=sum_along_path(path, 'cost')\n",
+    "            )\n",
+    "        )\n",
+    "    )\n",
+    ")"
    ]
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,auto:percent"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
