Add a notebook for rescaling Untappd ratings

--- a/etc/startup_count.ipynb
+++ b/etc/startup_count.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "29a39ea4-3c5b-4f78-b536-32c6503dfb94",
    "metadata": {
     "tags": []
@@ -86,7 +86,7 @@
        "4   AU       Australia           3021"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
     "\n",
     "\n",
     "# Manually downloaded from https://www.startupranking.com/countries because of CloudFlare protection\n",
-    "with open('https __www.startupranking.com_countries.html') as file:\n",
+    "with open('html_cache/https___www.startupranking.com_countries.html') as file:\n",
     "    sr_bs = BeautifulSoup(file.read())\n",
     "\n",
     "\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "2f3eba8a-69d7-4c02-8205-0c86a9f0ca43",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "4   AD       77006"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "6e2c4b07-aa91-4252-a2ba-5a56c21183d4",
    "metadata": {
     "tags": []
@@ -810,7 +810,7 @@
        "60   GE               Georgia             31     3726549             0.000008"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "f4263f41-d9b7-43a2-bda4-0c007b1c8a93",
    "metadata": {
     "tags": []
@@ -1480,7 +1480,7 @@
        "60             0.000021  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "b74d6571-b85b-41a6-a748-178d1fe23f89",
    "metadata": {
     "tags": []
@@ -2086,7 +2086,7 @@
        "60   SA          Saudi Arabia            171    33699947         5.074192e-06"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
