Add a notebook for rescaling Untappd ratings

--- a/etc/startup_count.ipynb
+++ b/etc/startup_count.ipynb
@@ -101,7 +101,7 @@
     "\n",
     "\n",
     "# Manually downloaded from https://www.startupranking.com/countries because of CloudFlare protection\n",
-    "with open('https __www.startupranking.com_countries.html') as file:\n",
+    "with open('html_cache/https___www.startupranking.com_countries.html') as file:\n",
     "    sr_bs = BeautifulSoup(file.read())\n",
     "\n",
     "\n",
